Add JSON Data File With Search Engine APIs and user Data
- Add config file to containing helper functions to read data.json

--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -28,9 +28,8 @@
   },
   "background": {
     "scripts": [
-      "js/libs/dov-utils.js",
-      "js/core/config.js",
-      "js/core/background.js"
+      "libs/dov-utils.js",
+      "core/js/config.js"
     ],
     "persistent": false
   },
