--- a/webextension/manifest.json
+++ b/webextension/manifest.json
@@ -24,7 +24,7 @@
   "browser_action": {
     "default_icon": "images/brand/128.png",
     "default_popup": "browser-action/popup.html",
-    "default_title": "Custom Search"
+    "default_title": "Netflix Categories"
   },
   "background": {
     "scripts": [
