--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "webextension/libs/jquery"]
 	path = webextension/libs/jquery
-	url = git@github.com:jquery/jquery.git
+	url = https://github.com/jquery/jquery.git
 [submodule "webextension/libs/twbs/bootstrap"]
 	path = webextension/libs/twbs/bootstrap
-	url = git@github.com:twbs/bootstrap.git
+	url = https://github.com/twbs/bootstrap.git
 [submodule "webextension/libs/FortAwesome/Font-Awesome"]
 	path = webextension/libs/FortAwesome/Font-Awesome
-	url = git@github.com:FortAwesome/Font-Awesome.git
+	url = https://github.com/FortAwesome/Font-Awesome.git
